Remove deprecated chat and livestream services, repositories, and related frontend components.